/*
 * Copyright (C) 2021 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package android.microdroid;

// Microdroid Signature is the body of the signature partition.
message MicrodroidSignature {
  uint32 version = 1;

  // Lists the signature information of the payload apexes.
  // The payload apexes are mapped to the partitions following the signature partition.
  repeated ApexSignature apexes = 2;

  ApkSignature apk = 3;
}

message ApexSignature {
  // Required.
  // The apex name.
  string name = 1;

  // Required.
  // The original size of the apex file.
  uint32 size = 2;

  // Optional.
  // When specified, the public key used to sign the apex should match with it.
  string publicKey = 3;

  // Optional.
  // When specified, the root digest of the apex should match with it.
  string rootDigest = 4;
}

message ApkSignature {
  // Required.
  // The name of APK.
  string name = 1;

  string payload_partition_name = 2;
  string idsig_partition_name = 3;
}